[tool.poetry]
name = "repl_nix_Davinci41"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gspread = "^5.8.0"
oauth2client = "^4.1.3"
pytz = "^2023.3"
requests = "^2.29.0"
schedule = "^1.2.0"
certifi = "^2022.12.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
